# Work-One

./: .gitignore  aaa_w.py  aaa_wo.py  analyze_captioning_dataset.py  attention_pooling.py  attention_pooling_caption.py  filter_k_images.py  grid_results_ViTL14@336px_pool-attn_01.txt  grid_results_ViTL14@336px_pool-mean_01.txt  grid_results_ViTL14@336px_pool-mean_02.txt  main.py  mean.py  mean_caption.py  mil_nce.py  mil_sim.py  pcme.py  pretrained_clip.py  pyproject.toml  single_image.py  split_dataset.py  transformer_caption.py  transformer_multi.py  utils_for_gpt.py
archived/: eval_pretrained_clip.py  filter_5_images.py  split_captioning_dataset_5imgs.py  train_single_image_vit_l14.py
dataset/: GoodNewsDataset.py  __init__.py
metrics/: __init__.py  retrieval_metrics.py
utils/: __init__.py  clip_utils.py  file_utils.py  json_utils.py  seed.py  training.py
