[project]
name = "goodnews"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "clip",
    "matplotlib>=3.10.7",
    "nltk>=3.9.2",
    "nvitop>=1.6.1",
    "timm>=1.0.22",
    "torch==2.4.1",
    "torchaudio==2.4.1",
    "torchvision==0.19.1",
]
[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
clip = { git = "https://github.com/openai/CLIP.git" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
